--- a/src/styles/mixins/size.css
+++ b/src/styles/mixins/size.css
@@ -1,4 +1,4 @@
-@mixin size($size: 16px) {
-  width: $size;
-  height: $size;
+@mixin size($width, $height) {
+  width: $width;
+  height: $height;
 }
